tests/negative/gold/member_name_test.gold
tests/negative/member_name_test.toit:4:3: error: Invalid member name
  foo. x: unresolved
  ^~~~
tests/negative/member_name_test.toit:6:3: error: Invalid member name
  constructor.+ y: unresolved
  ^~~~~~~~~~~~
tests/negative/member_name_test.toit:6:15: error: Unexpected token: +
  constructor.+ y: unresolved
              ^
tests/negative/member_name_test.toit:7:3: error: Invalid member name
  bar.= y: unresolved
  ^~~~
tests/negative/member_name_test.toit:7:7: error: Unexpected token: =
  bar.= y: unresolved
      ^
tests/negative/member_name_test.toit:6:20: error: Unresolved identifier: 'unresolved'
  constructor.+ y: unresolved
                   ^~~~~~~~~~
tests/negative/member_name_test.toit:4:11: error: Unresolved identifier: 'unresolved'
  foo. x: unresolved
          ^~~~~~~~~~
tests/negative/member_name_test.toit:7:12: error: Unresolved identifier: 'unresolved'
  bar.= y: unresolved
           ^~~~~~~~~~
Compilation failed.
